conclusion spacing fixed with proper bracket

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1660,10 +1660,10 @@ section {
 
 .village-conclusion-sub-section-headers {
     /* letter-spacing: .5rem; */
-    padding: 2rem 0;
+    padding: 3rem 0;
 }
 
-#village-conclusions h3 {
+#village-conclusions {
     padding: 2rem 0;
 }
 
@@ -2464,7 +2464,7 @@ section {
 
 
     .village-conclusion-sub-section-headers {
-        padding: 2rem;
+        padding: 2rem 0;
         text-align: center;
     }
 
@@ -2803,117 +2803,114 @@ section {
     .village-button-box {
         padding: 3rem 0;
         text-align: center;
+    }
+
+    .village-project-overview p {
+        padding: 5rem 0;
+    }
+
+    .village-deliverables-list {
+        grid-template-columns: 30rem 30rem 30rem;
+        margin: 0 9rem;
+
+        /*		padding: 4rem 0;*/
+    }
+
+    .village-deliver-three ul {
+        padding-left: 8rem;
+    }
+
+    .current-products-used {
+        text-align: center;
+        padding: 8rem 0;
+    }
+
+    .village-section-thoughts {
+        padding: 7rem;
+    }
+
+    #village-market-research h3 {
+        padding: 5rem 0;
+        margin: auto;
+        max-width: 70rem;
+    }
 
 
-        .village-project-overview p {
-            padding: 5rem 0;
-        }
 
-        .village-deliverables-list {
-            grid-template-columns: 30rem 30rem 30rem;
-            margin: 0 9rem;
+    .village-product-one .village-product-two .village-product-three h3 {
+        padding: 0;
 
-            /*		padding: 4rem 0;*/
-        }
+    }
 
-        .village-deliver-three ul {
-            padding-left: 8rem;
-        }
-
-        .current-products-used {
-            text-align: center;
-            padding: 8rem 0;
-        }
-
-        .village-section-thoughts {
-            padding: 7rem;
-        }
-
-        #village-market-research h3 {
-            padding: 5rem 0;
-            margin: auto;
-            max-width: 70rem;
-        }
-
-
-
-        .village-product-one .village-product-two .village-product-three h3 {
-            padding: 0;
-
-        }
-
-        /* .village-shutterfly .village-class-dojo .village-gmail {
+    /* .village-shutterfly .village-class-dojo .village-gmail {
             margin: 0 6rem;
         } */
 
-        .village-process-label {
-            padding: 5rem 0;
-        }
+    .village-process-label {
+        padding: 5rem 0;
+    }
 
 
-        .village-lofi-intro {
-            text-align: center;
-        }
+    .village-lofi-intro {
+        text-align: center;
+    }
 
-        .village-dashboard-lofi img {
-            max-width: 75%;
-        }
+    .village-dashboard-lofi img {
+        max-width: 75%;
+    }
 
-        .village-hifi-final-landing-grid img {
-            margin: 0 10rem;
-            max-width: 55%;
-        }
+    .village-hifi-final-landing-grid img {
+        margin: 0 10rem;
+        max-width: 55%;
+    }
 
-        .village-testing-intro {
-            text-align: center;
-        }
+    .village-testing-intro {
+        text-align: center;
+    }
 
-        #village-hifi-wireframe-creation p {
-            padding: 4rem 0;
-        }
+    #village-hifi-wireframe-creation p {
+        padding: 4rem 0;
+    }
 
-        .village-hifi-wireframe-mocks-landing {
-            max-width: 75%;
-        }
+    .village-hifi-wireframe-mocks-landing {
+        max-width: 75%;
+    }
 
-        .village-final-hifi-branding-pages img {
-            max-width: 50%;
-        }
+    .village-final-hifi-branding-pages img {
+        max-width: 50%;
+    }
 
-        .village-branding-individual-section-headers {
-            padding: 8rem 0 4rem 0;
-        }
+    .village-branding-individual-section-headers {
+        padding: 8rem 0 4rem 0;
+    }
 
-        .village-new-vs-old-button {
-            padding: 3rem 0;
-        }
+    .village-new-vs-old-button {
+        padding: 3rem 0;
+    }
 
-        #village-branding .village-deep-dive {
-            padding: 3rem 0;
-        }
+    #village-branding .village-deep-dive {
+        padding: 3rem 0;
+    }
 
-        .village-testing-sub-section-headers {
-            text-align: center;
-        }
+    .village-testing-sub-section-headers {
+        text-align: center;
+    }
 
-        .village-color-change-explanation {
-            text-align: center;
-        }
+    .village-color-change-explanation {
+        text-align: center;
+    }
 
-        .village-conclusion-wrap {
-            margin: 0 17rem;
-        }
+    .village-conclusion-wrap {
+        margin: 0 17rem;
+    }
 
-        .village-conclusion-wrap ul {
-            padding-left: 20rem;
-        }
+    .village-conclusion-wrap ul {
+        padding-left: 20rem;
+    }
 
-        .village-conclusion-sub-section-headers {
-            padding: 10rem 0 2rem 0;
-        }
-
-
-
-
+    .village-conclusion-sub-section-headers {
+        padding: 10rem 0 2rem 0;
 
     }
+
+}
